--- a/index-old.html
+++ b/index-old.html
@@ -178,7 +178,7 @@
           <h1>WP-TALK<br>STORE</h1>
           <h3 style="white-space:nowrap;">hello@wp-talk.com</h3>
           <div class="link">
-            <a href="https://news.wp-talk.com/" id="logo" target="_blank">매거진</a> |
+            <a href="https://news.wp-kr.com/" id="logo" target="_blank">매거진</a> |
             <a href="https://www.wp-talk.com/kakao/" id="logo" target="_blank">카카오톡 문의</a>
           </div>
         </div>
