--- a/kr/list/index.html
+++ b/kr/list/index.html
@@ -35,6 +35,7 @@
           <li><a href="./../plugin/woocommerce/" target="_blank">WooCommerce</a></li>
           <li><a href="./../plugin/query-monitor/" target="_blank">Query Monitor</a></li>
           <li><a href="./../plugin/contact-form-7/" target="_blank">Contact Form 7</a></li>
+          <li><a href="./../plugin/jetpack/" target="_blank">Jetpack</a></li>
           <li><a href="./../plugin/all-in-one-seo-pack/" target="_blank">All in One SEO Pack</a></li>
         </ul>
       </div>
