--- a/kr/plugin/jetpack/index.html
+++ b/kr/plugin/jetpack/index.html
@@ -217,10 +217,8 @@
   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
   <script src="./../../assets/js/iamport.js"></script>
   <script src="./../../assets/js/main.js"></script>
-
   <script>
-  var item_slug = "woocommerce";
-  // var item_slug = "twentytwenty";
+    var item_slug = "jetpack";
   </script>
   <script src="./../../assets/js/wp-plugin.js"></script>
 
