--- a/kr/plugin/contact-form-7/index.html
+++ b/kr/plugin/contact-form-7/index.html
@@ -13,6 +13,12 @@
   <link rel="stylesheet" type="text/css" href="./../../assets/css/main.css">
   <script src="./../../../assets/js/jquery/3.2.1/jquery.min.js"></script>
   <script src="./../../../assets/js/bootstrap/4.3.1/bootstrap.bundle.min.js"></script>
+  <script>
+    // const queryString = window.location.search;
+    // const urlParams = new URLSearchParams(queryString);
+    // var item_slug = urlParams.get('name');
+    var item_slug = "contact-form-7";
+  </script>
   <!-- Google Analytics( gtag.js / STORE.WP-TALK.COM ): Start -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129198477-7"></script>
   <script>
@@ -217,9 +223,6 @@
   <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
   <script src="./../../assets/js/iamport.js"></script>
   <script src="./../../assets/js/main.js"></script>
-  <script>
-    var item_slug = "contact-form-7";
-  </script>
   <script src="./../../assets/js/wp-plugin.js"></script>
 
 </body>
