--- a/kr/list/index.html
+++ b/kr/list/index.html
@@ -32,6 +32,7 @@
     <div class="container">
       <div class="mt-4">
         <ul>
+          <li><a href="./../plugin/?name=classic-editor" target="_blank">/?name=classic-editor</a></li>
           <li><a href="./../plugin/woocommerce/" target="_blank">WooCommerce</a></li>
           <li><a href="./../plugin/query-monitor/" target="_blank">Query Monitor</a></li>
           <li><a href="./../plugin/contact-form-7/" target="_blank">Contact Form 7</a></li>
