--- a/kr/plugin/index.html
+++ b/kr/plugin/index.html
@@ -17,7 +17,7 @@
     const queryString = window.location.search;
     const urlParams = new URLSearchParams(queryString);
     var item_slug = urlParams.get('name');
-    if ( item_slug == '' ) {
+    if ( ( item_slug == undefined ) || ( item_slug == '' ) ) {
       alert("입력된 상품 정보가 없습니다. 불편을 드려 죄송합니다.");
       $(location).attr('href', './../');
     }
