--- a/kr/plugin/index.html
+++ b/kr/plugin/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
-  <title>TEST 01 - WP-TALK Store</title>
+  <title>워드프레스 온라인 스토어 - WP-TALK Store</title>
   <link rel="shortcut icon" type="image/x-icon" href="./../../assets/img/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="./../../assets/css/bootstrap/4.3.1/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./../../assets/css/all.css">
