--- a/kr/item/kandan-pay-for-iamport/index.html
+++ b/kr/item/kandan-pay-for-iamport/index.html
@@ -132,6 +132,30 @@
             <div class="product-links pt-3">
               <dl class="row no-gutters product-rating pb-2 border-bottom">
                 <dt class="col-sm-6">
+                  제작자 :
+                </dt>
+                <dd class="col-sm-6">
+                  워드프레스톡 (WP-Talk)
+                </dd>
+              </dl>
+              <dl class="row no-gutters product-rating pb-2 border-bottom">
+                <dt class="col-sm-6">
+                  파일 형식 :
+                </dt>
+                <dd class="col-sm-6">
+                  ZIP
+                </dd>
+              </dl>
+              <dl class="row no-gutters product-rating pb-2 border-bottom">
+                <dt class="col-sm-6">
+                  라이센스 기한 :
+                </dt>
+                <dd class="col-sm-6">
+                  1년 (365일)
+                </dd>
+              </dl>
+              <dl class="row no-gutters product-rating pb-2 border-bottom">
+                <dt class="col-sm-6">
                   평점 :
                 </dt>
                 <dd class="col-sm-6">
