--- a/kr/item/baidu-map-for-wordpress/index.html
+++ b/kr/item/baidu-map-for-wordpress/index.html
@@ -96,7 +96,7 @@
           <div class="product-widget widget">
             <div class="product-title mt-2">
               <h2 class="post-title font-weight-bold">
-                <a href="./" style="color:initial;text-decoration:none;">
+                <a id="product-name" href="./" style="color:initial;text-decoration:none;">
                   Baidu Map for WordPress
                 </a>
               </h2>
@@ -124,7 +124,7 @@
               </p>
             </div>
             <div class="product-links pt-3">
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   제작자 :
                 </dt>
@@ -132,7 +132,7 @@
                   워드프레스톡 (WP-Talk)
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   파일 형식 :
                 </dt>
@@ -140,7 +140,7 @@
                   ZIP
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   라이센스 기한 :
                 </dt>
@@ -148,7 +148,7 @@
                   1년 (365일)
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   평점 :
                 </dt>
