--- a/kr/item/china-speed-optimizer/index.html
+++ b/kr/item/china-speed-optimizer/index.html
@@ -98,7 +98,7 @@
           <div class="product-widget widget">
             <div class="product-title mt-2">
               <h1 class="post-title font-weight-bold">
-                <a href="./" style="color:initial;text-decoration:none;">
+                <a id="product-name" href="./" style="color:initial;text-decoration:none;">
                   China Speed Optimizer
                 </a>
               </h1>
@@ -126,7 +126,7 @@
               </p>
             </div>
             <div class="product-links pt-3">
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   제작자 :
                 </dt>
@@ -134,7 +134,7 @@
                   워드프레스톡 (WP-Talk)
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   파일 형식 :
                 </dt>
@@ -142,7 +142,7 @@
                   ZIP
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   라이센스 기한 :
                 </dt>
@@ -150,7 +150,7 @@
                   1년 (365일)
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   평점 :
                 </dt>
