--- a/kr/item/child-theme-builder/index.html
+++ b/kr/item/child-theme-builder/index.html
@@ -97,7 +97,7 @@
           <div class="product-widget widget">
             <div class="product-title mt-2">
               <h2 class="post-title font-weight-bold">
-                <a href="./" style="color:initial;text-decoration:none;">
+                <a id="product-name" href="./" style="color:initial;text-decoration:none;">
                   WordPress Child Theme Builder
                 </a>
               </h2>
@@ -125,7 +125,7 @@
               </p>
             </div>
             <div class="product-links pt-3">
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   제작자 :
                 </dt>
@@ -133,7 +133,7 @@
                   워드프레스톡 (WP-Talk)
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   파일 형식 :
                 </dt>
@@ -141,7 +141,7 @@
                   ZIP
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   라이센스 기한 :
                 </dt>
@@ -149,7 +149,7 @@
                   1년 (365일)
                 </dd>
               </dl>
-              <dl class="row no-gutters product-rating pb-2 border-bottom">
+              <dl class="row no-gutters product-rating pb-1 border-bottom">
                 <dt class="col-sm-6">
                   평점 :
                 </dt>
